--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
-    "name": "dcat/page",
-    "description": "为PHPer打造的静态站点构建工具。",
+    "name": "kzh/page",
+    "description": "为PHPer打造的静态站点构建工具",
     "type": "library",
     "keywords": ["dcat-page", "dcat"],
-    "homepage": "https://github.com/jqhph/dcat-page",
+    "homepage": "https://github.com/datangkang123/dcat-page",
     "license": "MIT",
     "authors": [
         {
-            "name": "jqh",
-            "email": "841324345@qq.com"
+            "name": "kzh",
+            "email": "2554509967@qq.com"
         }
     ],
     "require": {
         "php": ">=7.1.0",
         "erusev/parsedown-extra": "^0.7.1",
-        "symfony/dom-crawler": "~3.1|~4.0"
+        "symfony/dom-crawler": ">=3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0"
